galley/pkg/config/analysis/analyzers/testdata/webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: istio-sidecar-injector-missing-overlap
webhooks:
- admissionReviewVersions:
  - v1beta1
  clientConfig:
    service:
      name: fake
      namespace: istio-system
  name: sidecar-injector.istio.io
  namespaceSelector:
    matchLabels:
      istio-injection: enabled
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: istio-sidecar-injector-overlap
webhooks:
- admissionReviewVersions:
  - v1beta1
  clientConfig:
    service:
      name: istiod
      namespace: istio-system
  name: sidecar-injector.istio.io
  namespaceSelector:
    matchLabels:
      istio-injection: enabled
---
apiVersion: v1
kind: Service
metadata:
  name: istiod
  namespace: istio-system
spec: {}
